examples/test/testpolicy7878.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7878
  namespace: namespace480
spec:
  podSelector:
    matchLabels:
      key3: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value10
          key47: value28
          key5: value18
      podSelector:
        matchLabels:
          key17: value49
          key40: value27
          key35: value13
